2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: (recursive_compare): handle the case where the
	found file is /usr/share/zoneinfo/posix/Europe/Paris (ie, strip the
	"posix/" too)
	(system_timezone_read_etc_localtime_content): plug leak

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	Improve how the find entry is filled: always use the location name as a
	start, and put the cursor at the end of the string so the user can
	continue to type. Fix bug #527403
	Be more solid against cases where there's no Locations.xml

	* clock.c: (fill_location_tree): be more solid
	(find_next_location): ditto
	(find_entry_changed): ditto
	(find_weather_code): ditto
	(edit_clear): don't reset the state of the find window here, it's done
	in run_find_location()
	(run_find_location): improve the behavior of the find entry

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	Do not create lots of new ClockLocation everytime we load the locations
	from gconf, and try to re-use the old ones.
	As a side-effect, it fixes a bug where you need to click twice on Set
	to set the current location from a different timezone.

	* clock-location.[ch]: (clock_location_find_and_ref): new, find a
	ClockLocation if it already exists, and ref it
	(clock_location_make_current): do not do anything if the location is
	already the current one
	* clock.c: (location_start_element): try to find the location among
	existing ones first, and then fallback on creating a new one
	(run_prefs_edit_save): do not explicitly call locations_changed(), it
	will be done later via gconf notification
	(remove_tree_row): ditto

==================== 2.22.1.2 ====================

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (zone_combo_changed): add FIXME

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: be a bit more reasonable with the height :-)

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: change again the default size of the find location